--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background">
+    android:background="@color/background"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="5dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp">
 
         <TextView
             android:id="@+id/titleTextView"
@@ -42,8 +42,8 @@
         android:layout_height="match_parent"
         android:background="@color/background"
         android:orientation="vertical"
-        android:paddingRight="25dp"
-        android:paddingLeft="25dp">
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp">
 
         <com.prolificinteractive.materialcalendarview.MaterialCalendarView
             android:id="@+id/calendar"
@@ -62,11 +62,11 @@
                 android:id="@+id/dateTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:text="2021년 4월 28일은, "
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
-                android:textColor="@color/font" />
+                android:text="2021년 4월 28일은, "
+                android:textColor="@color/font"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/moodTextView"
@@ -89,23 +89,23 @@
                 android:id="@+id/showDiaryStateView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:gravity="center"
+                android:orientation="vertical"
                 android:visibility="visible">
 
                 <ImageView
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:layout_marginBottom="5dp"
-                    android:src="@drawable/mood_crying_color" />
+                    android:src="@drawable/ic_mood_crying" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:textSize="14sp"
+                    android:text="일기가 없습니다.."
                     android:textColor="@color/gray"
-                    android:text="일기가 없습니다.." />
+                    android:textSize="14sp" />
 
                 <Button
                     android:id="@+id/writeButton"
@@ -114,17 +114,17 @@
                     android:background="@drawable/circle_view"
                     android:text="@string/write"
                     android:textColor="@color/pastel_700"
-                    android:textStyle="bold"
-                    android:textSize="17sp" />
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
-                android:visibility="gone"
-                android:paddingTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:visibility="gone" />
 
         </FrameLayout>
     </LinearLayout>
