--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,8 +8,8 @@
         android:id="@+id/contentsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:longClickable="true"
         android:background="@drawable/border_view"
+        android:longClickable="true"
         android:orientation="vertical"
         android:padding="12dp"
         android:visibility="visible">
@@ -27,7 +27,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:padding="8dp"
-                app:srcCompat="@drawable/mood_angry_color" />
+                app:srcCompat="@drawable/ic_mood_angry" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -87,8 +87,8 @@
                         android:id="@+id/existPictureImageView"
                         android:layout_width="10dp"
                         android:layout_height="10dp"
-                        android:layout_marginLeft="7dp"
                         android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="7dp"
                         android:src="@drawable/exist_picture" />
 
                 </LinearLayout>
@@ -98,10 +98,10 @@
                 android:id="@+id/bookmark_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="8dp"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
@@ -127,13 +127,13 @@
             android:id="@+id/contentsTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="12dp"
             android:layout_marginRight="10dp"
+            android:layout_marginBottom="8dp"
+            android:ellipsize="end"
             android:lineSpacingExtra="1.5dp"
             android:text="내용"
-            android:ellipsize="end"
             android:textColor="@color/font_contents"
             android:textSize="14sp" />
 
@@ -143,8 +143,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="3dp"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp">
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
             <ImageView
                 android:id="@+id/weatherImageView"
@@ -212,8 +212,8 @@
                 android:id="@+id/starImageView2"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-                android:layout_toEndOf="@id/weekTextView2"
                 android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/weekTextView2"
                 app:srcCompat="@drawable/star" />
 
         </RelativeLayout>
@@ -226,26 +226,26 @@
                 android:id="@+id/showPhotoStateView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:gravity="center"
+                android:orientation="vertical"
                 android:visibility="visible">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
                     android:text="사진이 없습니다.."
-                    android:textColor="@color/gray" />
+                    android:textColor="@color/gray"
+                    android:textSize="15sp" />
 
             </LinearLayout>
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/photo_view_pager"
-                android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_margin="10dp"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <LinearLayout
                 android:id="@+id/photo_indicator"
@@ -254,34 +254,34 @@
                 android:layout_gravity="end|bottom"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
-                android:visibility="gone"
+                android:background="@drawable/gray_ellipse"
                 android:orientation="horizontal"
-                android:paddingVertical="3dp"
                 android:paddingHorizontal="10dp"
-                android:background="@drawable/gray_ellipse">
+                android:paddingVertical="3dp"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/current_banner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1"
-                    android:textSize="13sp"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="13sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="/"
-                    android:textSize="13sp"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="13sp" />
 
                 <TextView
                     android:id="@+id/total_banner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2"
-                    android:textSize="13sp"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="13sp" />
 
             </LinearLayout>
 
@@ -298,10 +298,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:lineSpacingExtra="1.5dp"
-                android:text="내용"
-                android:maxLines="3"
                 android:ellipsize="end"
+                android:lineSpacingExtra="1.5dp"
+                android:maxLines="3"
+                android:text="내용"
                 android:textColor="@color/font_contents"
                 android:textSize="14sp" />
 
@@ -314,7 +314,7 @@
                     android:layout_width="18dp"
                     android:layout_height="18dp"
                     android:layout_alignParentStart="true"
-                    app:srcCompat="@drawable/mood_angry_color" />
+                    app:srcCompat="@drawable/ic_mood_angry" />
 
                 <ImageView
                     android:id="@+id/weatherImageView2"
@@ -328,9 +328,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:ellipsize="marquee"
                     android:gravity="center"
                     android:singleLine="true"
-                    android:ellipsize="marquee"
                     android:text="위치"
                     android:textColor="@color/pastel_700"
                     android:textSize="12sp" />
