--- a/app/src/main/res/layout/activity_font.xml
+++ b/app/src/main/res/layout/activity_font.xml
@@ -124,131 +124,141 @@
                                 android:textSize="14sp" />
 
                             <RadioButton
-                                android:id="@+id/basicFontButton"
+                                android:id="@+id/btn_font_main"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="7dp"
                                 android:fontFamily="@font/main_font"
+                                android:text=" 프리텐다드"
+                                android:textColor="@color/font"
+                                android:textSize="14sp" />
+
+                            <RadioButton
+                                android:id="@+id/btn_font_1"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="7dp"
+                                android:fontFamily="@font/font"
                                 android:text=" 국립공원 꼬미체"
                                 android:textColor="@color/font"
                                 android:textSize="14sp" />
 
                             <RadioButton
-                                android:id="@+id/fontButton"
+                                android:id="@+id/btn_font_2"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="7dp"
-                                android:fontFamily="@font/font1"
+                                android:fontFamily="@font/font2"
                                 android:text=" 교보손글씨체"
                                 android:textColor="@color/font"
                                 android:textSize="14sp" />
 
                             <RadioButton
-                                android:id="@+id/fontButton2"
+                                android:id="@+id/btn_font_3"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="7dp"
-                                android:fontFamily="@font/font2"
+                                android:fontFamily="@font/font3"
                                 android:text=" 점꼴체"
                                 android:textColor="@color/font"
                                 android:textSize="14sp" />
 
                             <RadioButton
-                                android:id="@+id/fontButton3"
+                                android:id="@+id/btn_font_4"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="7dp"
-                                android:fontFamily="@font/font3"
+                                android:fontFamily="@font/font4"
                                 android:text=" 넥슨배찌체"
                                 android:textColor="@color/font"
                                 android:textSize="14sp" />
 
                             <RadioButton
-                                android:id="@+id/fontButton4"
+                                android:id="@+id/btn_font_5"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="7dp"
-                                android:fontFamily="@font/font4"
+                                android:fontFamily="@font/font5"
                                 android:text=" 미니콩다방체"
                                 android:textColor="@color/font"
                                 android:textSize="14sp" />
 
                             <RadioButton
-                                android:id="@+id/fontButton5"
+                                android:id="@+id/btn_font_6"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="7dp"
-                                android:fontFamily="@font/font5"
+                                android:fontFamily="@font/font6"
                                 android:text=" 꼬마나비체"
                                 android:textColor="@color/font"
                                 android:textSize="13sp" />
 
                             <RadioButton
-                                android:id="@+id/fontButton6"
+                                android:id="@+id/btn_font_7"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="7dp"
-                                android:fontFamily="@font/font6"
+                                android:fontFamily="@font/font7"
                                 android:text=" 심경하체"
                                 android:textColor="@color/font"
                                 android:textSize="14sp" />
 
                             <RadioButton
-                                android:id="@+id/fontButton7"
+                                android:id="@+id/btn_font_8"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="7dp"
-                                android:fontFamily="@font/font7"
+                                android:fontFamily="@font/font8"
                                 android:text=" 강원교육모두체"
                                 android:textColor="@color/font"
                                 android:textSize="14sp" />
 
                             <RadioButton
-                                android:id="@+id/fontButton8"
+                                android:id="@+id/btn_font_9"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="7dp"
-                                android:fontFamily="@font/font8"
+                                android:fontFamily="@font/font9"
                                 android:text=" 쿠키런체"
                                 android:textColor="@color/font"
                                 android:textSize="14sp" />
 
                             <RadioButton
-                                android:id="@+id/fontButton9"
+                                android:id="@+id/btn_font_10"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="7dp"
-                                android:fontFamily="@font/font9"
+                                android:fontFamily="@font/font10"
                                 android:text=" 온글잎 만두몽키체"
                                 android:textColor="@color/font"
                                 android:textSize="14sp" />
 
                             <RadioButton
-                                android:id="@+id/fontButton10"
+                                android:id="@+id/btn_font_11"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="7dp"
-                                android:fontFamily="@font/font10"
+                                android:fontFamily="@font/font11"
                                 android:text=" 온글잎 윤우체"
                                 android:textColor="@color/font"
                                 android:textSize="14sp" />
 
                             <RadioButton
-                                android:id="@+id/fontButton11"
+                                android:id="@+id/btn_font_12"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="7dp"
-                                android:fontFamily="@font/font11"
+                                android:fontFamily="@font/font12"
                                 android:text=" 코트라 희망체"
                                 android:textColor="@color/font"
                                 android:textSize="14sp" />
 
                             <RadioButton
-                                android:id="@+id/fontButton12"
+                                android:id="@+id/btn_font_13"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="7dp"
-                                android:fontFamily="@font/font12"
+                                android:fontFamily="@font/font13"
                                 android:text=" ACC 어린이 마음고운체"
                                 android:textColor="@color/font"
                                 android:textSize="14sp" />
