--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -79,6 +79,66 @@
         <item name="android:fontFamily">sans-serif</item>
     </style>
 
+    <!-- 프리텐다드 (메인) -->
+    <style name="Theme.MainDiaryProject" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorAccent">@color/pastel_700</item>
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/background</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <!-- API 23 이상부터 가능(상태바 위의 상태표시줄 색상) -->
+        <item name="android:windowLightStatusBar">true</item>
+        <!-- Customize your theme here. -->
+        <item name="toolbarStyle">@style/ToolbarStyle</item>
+        <item name="bottomNavigationStyle">@style/Widget.MainBottomNavigationView</item>
+        <item name="android:textViewStyle">@style/MainTextViewFontStyle</item>
+        <item name="android:buttonStyle">@style/MainButtonFontStyle</item>
+        <item name="editTextStyle">@style/MainEditTextFontStyle</item>
+        <item name="radioButtonStyle">@style/MainRadioButtonFontStyle</item>
+        <item name="android:checkboxStyle">@style/MainCheckboxFontStyle</item>
+        <item name="android:spinnerStyle">@style/MainSpinnerFontStyle</item>
+        <item name="mcv_headerTextAppearance">@style/MainCalenderHeaderFontStyle</item>
+        <item name="mcv_dateTextAppearance">@style/MainCalenderHeaderFontStyle</item>
+    </style>
+
+    <style name="Widget.MainBottomNavigationView" parent="Widget.Design.BottomNavigationView">
+        <item name="fontFamily">@font/font</item>
+    </style>
+
+    <style name="MainCalenderHeaderFontStyle">
+        <item name="android:fontFamily">@font/main_font</item>
+    </style>
+
+    <style name="MainTextViewFontStyle" parent="@android:style/Widget.DeviceDefault.TextView">
+        <item name="android:fontFamily">@font/main_font</item>
+    </style>
+
+    <style name="MainButtonFontStyle" parent="@android:style/Widget.DeviceDefault.Button.Borderless">
+        <item name="android:fontFamily">@font/main_font</item>
+    </style>
+
+    <style name="MainEditTextFontStyle" parent="@android:style/Widget.DeviceDefault.EditText">
+        <item name="android:fontFamily">@font/main_font</item>
+    </style>
+
+    <style name="MainRadioButtonFontStyle" parent="@android:style/Widget.DeviceDefault.CompoundButton.RadioButton">
+        <item name="android:fontFamily">@font/main_font</item>
+    </style>
+
+    <style name="MainCheckboxFontStyle" parent="@android:style/Widget.DeviceDefault.CompoundButton.CheckBox">
+        <item name="android:fontFamily">@font/main_font</item>
+    </style>
+
+    <style name="MainSpinnerFontStyle" parent="Widget.AppCompat.Spinner">
+        <item name="android:fontFamily">@font/main_font</item>
+    </style>
+
     <!-- 국립공원 꼬미체 -->
     <style name="Theme.DiaryProject" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
@@ -97,25 +157,25 @@
         <!-- Customize your theme here. -->
         <item name="toolbarStyle">@style/ToolbarStyle</item>
         <item name="bottomNavigationStyle">@style/Widget.BottomNavigationView</item>
-        <item name="android:textViewStyle">@style/customTextViewFontStyle</item>
+        <item name="android:textViewStyle">@style/CustomTextViewFontStyle</item>
         <item name="android:buttonStyle">@style/customButtonFontStyle</item>
         <item name="editTextStyle">@style/customEditTextFontStyle</item>
         <item name="radioButtonStyle">@style/customRadioButtonFontStyle</item>
         <item name="android:checkboxStyle">@style/customCheckboxFontStyle</item>
         <item name="android:spinnerStyle">@style/customSpinnerFontStyle</item>
-        <item name="mcv_headerTextAppearance">@style/customCalenderHeaderFontStyle</item>
-        <item name="mcv_dateTextAppearance">@style/customCalenderHeaderFontStyle</item>
+        <item name="mcv_headerTextAppearance">@style/CustomCalenderHeaderFontStyle</item>
+        <item name="mcv_dateTextAppearance">@style/CustomCalenderHeaderFontStyle</item>
     </style>
 
     <style name="Widget.BottomNavigationView" parent="Widget.Design.BottomNavigationView">
         <item name="fontFamily">@font/font</item>
     </style>
 
-    <style name="customCalenderHeaderFontStyle">
+    <style name="CustomCalenderHeaderFontStyle">
         <item name="android:fontFamily">@font/font</item>
     </style>
 
-    <style name="customTextViewFontStyle" parent="@android:style/Widget.DeviceDefault.TextView">
+    <style name="CustomTextViewFontStyle" parent="@android:style/Widget.DeviceDefault.TextView">
         <item name="android:fontFamily">@font/font</item>
     </style>
 
@@ -140,7 +200,7 @@
     </style>
 
     <!-- 교보손글씨체 -->
-    <style name="Theme.DiaryProject1" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.DiaryProject_2" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorAccent">@color/pastel_700</item>
         <item name="colorPrimary">@color/purple_500</item>
@@ -164,15 +224,15 @@
         <item name="radioButtonStyle">@style/customRadioButtonFontStyle1</item>
         <item name="android:checkboxStyle">@style/customCheckboxFontStyle1</item>
         <item name="android:spinnerStyle">@style/customSpinnerFontStyle1</item>
-        <item name="mcv_headerTextAppearance">@style/customCalenderHeaderFontStyle1</item>
-        <item name="mcv_dateTextAppearance">@style/customCalenderHeaderFontStyle1</item>
+        <item name="mcv_headerTextAppearance">@style/CustomCalenderHeaderFontStyle2</item>
+        <item name="mcv_dateTextAppearance">@style/CustomCalenderHeaderFontStyle2</item>
     </style>
 
     <style name="Widget.BottomNavigationView1" parent="Widget.Design.BottomNavigationView">
         <item name="fontFamily">@font/font2</item>
     </style>
 
-    <style name="customCalenderHeaderFontStyle1">
+    <style name="CustomCalenderHeaderFontStyle2">
         <item name="android:fontFamily">@font/font2</item>
     </style>
 
@@ -201,7 +261,7 @@
     </style>
 
     <!-- 점꼴체 -->
-    <style name="Theme.DiaryProject2" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.DiaryProject_3" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorAccent">@color/pastel_700</item>
         <item name="colorPrimary">@color/purple_500</item>
@@ -261,7 +321,7 @@
     </style>
 
     <!-- 넥슨배찌체 -->
-    <style name="Theme.DiaryProject3" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.DiaryProject_4" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorAccent">@color/pastel_700</item>
         <item name="colorPrimary">@color/purple_500</item>
@@ -321,7 +381,7 @@
     </style>
 
     <!-- 미니콩다방체 -->
-    <style name="Theme.DiaryProject4" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.DiaryProject_5" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorAccent">@color/pastel_700</item>
         <item name="colorPrimary">@color/purple_500</item>
@@ -381,7 +441,7 @@
     </style>
 
     <!-- 꼬마나비체 -->
-    <style name="Theme.DiaryProject5" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.DiaryProject_6" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorAccent">@color/pastel_700</item>
         <item name="colorPrimary">@color/purple_500</item>
@@ -440,7 +500,7 @@
     </style>
 
     <!-- 심경하체 -->
-    <style name="Theme.DiaryProject6" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.DiaryProject_7" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorAccent">@color/pastel_700</item>
         <item name="colorPrimary">@color/purple_500</item>
@@ -499,7 +559,7 @@
     </style>
 
     <!-- 강원교육모두체 -->
-    <style name="Theme.DiaryProject7" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.DiaryProject_8" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorAccent">@color/pastel_700</item>
         <item name="colorPrimary">@color/purple_500</item>
@@ -558,7 +618,7 @@
     </style>
 
     <!-- 쿠키런체 -->
-    <style name="Theme.DiaryProject8" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.DiaryProject_9" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorAccent">@color/pastel_700</item>
         <item name="colorPrimary">@color/purple_500</item>
@@ -617,7 +677,7 @@
     </style>
 
     <!-- 온글잎 만두몽키체 -->
-    <style name="Theme.DiaryProject9" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.DiaryProject_10" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorAccent">@color/pastel_700</item>
         <item name="colorPrimary">@color/purple_500</item>
@@ -676,7 +736,7 @@
     </style>
 
     <!-- 온글잎 윤우체 -->
-    <style name="Theme.DiaryProject10" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.DiaryProject_11" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorAccent">@color/pastel_700</item>
         <item name="colorPrimary">@color/purple_500</item>
@@ -735,7 +795,7 @@
     </style>
 
     <!-- 코트라 희망체 -->
-    <style name="Theme.DiaryProject11" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.DiaryProject_12" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorAccent">@color/pastel_700</item>
         <item name="colorPrimary">@color/purple_500</item>
@@ -794,7 +854,7 @@
     </style>
 
     <!-- ACC 어린이 마음고운체 -->
-    <style name="Theme.DiaryProject12" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.DiaryProject_13" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorAccent">@color/pastel_700</item>
         <item name="colorPrimary">@color/purple_500</item>
